port r50300 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50301 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,9 @@ BUG FIXES
     o	findLineNum() and setBreakpoint() would sometimes fail if the 
     	specified file was not in the current directory.
 
+    o	Package tcltk's demo(tkdensity) was broken in 2.9.0 when demo()
+	was changed to set par(ask = TRUE).
+
 
 
 
