ported r50323-4 [abline(*, untf=TRUE)] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50326 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -32,7 +32,7 @@ BUG FIXES
 	long vector containing some non-ASCII data.
 
     o	The default method of weighted.mean(na.rm = TRUE) did not omit
-	weights for NA observations in 2.10.0.  (PR#14032)
+	weights for NA observations in 2.10.0.	(PR#14032)
 
     o	[g]regexpr(pattern, fixed = TRUE) returned match positions in
 	bytes (not characters) in an MBCS locale if 'pattern' was a
@@ -41,9 +41,9 @@ BUG FIXES
 	[g]sub(fixed = TRUE) with a single-byte pattern could
 	conceivably have matched part of a multibyte character in a
 	non-UTF-8 MBCS.
-	
-    o	findLineNum() and setBreakpoint() would sometimes fail if the 
-    	specified file was not in the current directory.
+
+    o	findLineNum() and setBreakpoint() would sometimes fail if the
+	specified file was not in the current directory.
 
     o	Package tcltk's demo(tkdensity) was broken in 2.9.0 when demo()
 	was changed to set par(ask = TRUE).
@@ -51,6 +51,9 @@ BUG FIXES
     o	gsub() with backrefs could fail on extremely long strings
 	(hundreds of thousands of characters) due to integer overflow
 	in a length calculation.
+
+    o	abline(*, untf=TRUE) now uses a better x-grid in log-scale, e.g.,
+	for plot(c(1,300), c(1,300), log="xy") ; abline(4,1, untf=TRUE).
 
 
 
