port r50320 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50329 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,11 @@
 		CHANGES IN R VERSION 2.10.0 patched
 
 
+NEW FEATURES
+
+    o	The PCRE library has been updated to version 8.00.
+
+
 INSTALLATION
 
     o	configure will be able to find a usable libtiff in some rare
@@ -28,8 +33,9 @@ BUG FIXES
     o	trigamma(x) and other psigamma(x, n) calls are now accurate for
 	very large abs(x). (PR#14020)
 
-    o	[g]sub() could use excessive stack space when used with a very
-	long vector containing some non-ASCII data.
+    o	[g]sub(perl=FALSE, fixed=FALSE) could use excessive stack space
+	when used with a very long vector containing some non-ASCII
+	strings.
 
     o	The default method of weighted.mean(na.rm = TRUE) did not omit
 	weights for NA observations in 2.10.0.	(PR#14032)
@@ -54,6 +60,10 @@ BUG FIXES
 
     o	abline(*, untf=TRUE) now uses a better x-grid in log-scale, e.g.,
 	for plot(c(1,300), c(1,300), log="xy") ; abline(4,1, untf=TRUE).
+
+    o	detach/unloadNamespace() arrange to flush the package's
+ 	lazyload cache of R objects once the package/namespace is no
+	longer needed.
 
 
 
