--- a/NEWS
+++ b/NEWS
@@ -75,6 +75,9 @@ BUG FIXES
     o	available.packages() could fail when run on a small repository
     	(PR#14042).
 
+    o	rep(x, times, each=2) gave invalid results when the 'times'
+	argument is a vector longer than 'x'.  Reported by Bill Dunlap.
+
 
 
 		CHANGES IN R VERSION 2.10.0
