--- a/NEWS
+++ b/NEWS
@@ -76,7 +76,7 @@ NEW FEATURES
 	.onUnload() hook functions (unless --install=fake).
 
     o	prop.table(x) now accepts a one-dimensional table for x.
-    
+
     o	A new function vapply() has been added, based on a suggestion
 	from Bill Dunlap.  It requires that a template for the
 	function value be specified, and uses it to determine the
@@ -199,6 +199,8 @@ BUG FIXES
 	more accurate in some regions for very small 'a'.  qgamma() now
 	correctly returns 0 instead of NaN in similar extreme cases, and
 	qgamma() no longer warns in the case of small 'a', see (PR#12324).
+
+    o	unname() now also removes names from a zero length vector.
 
 
 
