--- a/NEWS
+++ b/NEWS
@@ -202,6 +202,8 @@ BUG FIXES
 
     o	unname() now also removes names from a zero length vector.
 
+    o	printing ls.str() results no longer evaluates unevaluated calls.
+
 
 
 		CHANGES IN R VERSION 2.10.0
