ported r50426,7 [unname(), print(ls.str())] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50428 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -92,6 +92,10 @@ BUG FIXES
 	correctly returns 0 instead of NaN in similar extreme cases, and
 	qgamma() no longer warns in the case of small 'a', see (PR#12324).
 
+    o	unname() now also removes names from a zero length vector.
+
+    o	printing ls.str() results no longer evaluates unevaluated calls.
+
 
 
 		CHANGES IN R VERSION 2.10.0
