Show NEWS and CHANGES in HTML main page.
git-svn-id: https://svn.r-project.org/R/trunk@50429 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -83,6 +83,9 @@ NEW FEATURES
 	output type and to check for consistency in the function
 	values.
 
+    o	The main HTML help page now links to this NEWS file.
+	(Suggested by Henrik Bengtsson.)
+    
 
 DEPRECATED & DEFUNCT
 
