implement (in different ways) two suggestions of Jens Oehlschlägel
git-svn-id: https://svn.r-project.org/R/trunk@50436 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -85,6 +85,11 @@ NEW FEATURES
 
     o	The main HTML help page now links to this NEWS file.
 	(Suggested by Henrik Bengtsson.)
+
+    o	The [ method for class "AsIs" allows the next method to change
+	the underlying class.  (Wish of Jens Oehlschlägel.)
+
+    o	write.csv[2] no longer allow 'append' to be changed.
     
 
 DEPRECATED & DEFUNCT
