--- a/NEWS
+++ b/NEWS
@@ -94,7 +94,11 @@ BUG FIXES
 
     o	unname() now also removes names from a zero length vector.
 
-    o	printing ls.str() results no longer evaluates unevaluated calls.
+    o	Printing results from ls.str() no longer evaluates unevaluated
+	calls.
+
+    o	complete.cases() failed on a 0-column data frame argument.
+	(Underlies PR#14066.)
 
 
 
