Use common header via new function HTMLheader() on several different help pages; add toHTML generic.
Link to list of demos if present.


git-svn-id: https://svn.r-project.org/R/trunk@50445 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -84,7 +84,8 @@ NEW FEATURES
 	values.
 
     o	The main HTML help page now links to this NEWS file.
-	(Suggested by Henrik Bengtsson.)
+	(Suggested by Henrik Bengtsson.)  Package index files link
+	to a list of demos when using dynamic help.
 
     o	The [ method for class "AsIs" allows the next method to change
 	the underlying class.  (Wish of Jens Oehlschlägel.)
