Simplify 00Index.html page for S4 methods
git-svn-id: https://svn.r-project.org/R/trunk@50455 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-
+﻿
 	**************************************************
 	*						 *
 	*	       2.11 SERIES NEWS			 *
@@ -92,6 +92,9 @@ NEW FEATURES
 
     o	write.csv[2] no longer allow 'append' to be changed.
     
+    o	The index page for HTML help for a package now collapses
+    	multiple signatures for S4 methods into a single entry.
+
 
 DEPRECATED & DEFUNCT
 
