--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -1,4 +1,4 @@
-﻿
+
 	**************************************************
 	*	 Windows-specific changes to R		 *
 	*	 See the file NEWS for changes that	 *
@@ -23,6 +23,10 @@ BUG FIXES
 
     o	Rcmd INSTALL once again uses --no-restore, for consistency with
 	the Unix version and R 2.9.2.
+	
+    o	The HTML package index was not constructed properly when the
+	library path was specified with backslashes.  (Patch submitted
+	by Gabor Grothendieck.)
     	
 
 
