workaround for PR#14035
git-svn-id: https://svn.r-project.org/R/trunk@50474 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -121,7 +121,8 @@ DEPRECATED & DEFUNCT
 
 BUG FIXES
 
-    o	Placeholder.
+    o	Using with(), eval() etc with a list with some unnamed
+	elements now works. (PR#14035)
 
 
 
