incorporate TSL's suggestion for PR#14031
git-svn-id: https://svn.r-project.org/R/trunk@50480 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -102,6 +102,9 @@ NEW FEATURES
 	use, and warns otherwise.  [The default is intended to be
 	changed before release.]
 
+    o	bquote() has been extended to work on function definitions
+	(wish of PR#14031).
+
 
 DEPRECATED & DEFUNCT
 
