fix up names in chisq.test
git-svn-id: https://svn.r-project.org/R/trunk@50493 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -250,6 +250,9 @@ BUG FIXES
 	Windows crashed R (other OSes reported a lack of resources).
 	(PR#14068)
 
+    o	chisq.test() could fail when given argument 'x' or 'y' which
+	deparsed to more than one line.  (Reported by Laurent Gauthier.)
+
 
 
 		CHANGES IN R VERSION 2.10.0
