port r50507 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50508 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -126,6 +126,10 @@ BUG FIXES
 	them is unloaded (by unloadNamespace() as well as by
 	detach(unload = TRUE)).
 
+    o	The internal record-keeping by dyn.load/dyn.unload was
+	incomplete, which this could crash R if a DLL that registered
+	.External routines had earlier been unloaded.
+
 
 
 		CHANGES IN R VERSION 2.10.0
