revert to returning something useful from detach()
git-svn-id: https://svn.r-project.org/R/trunk@50513 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -105,6 +105,9 @@ NEW FEATURES
     o	bquote() has been extended to work on function definitions
 	(wish of PR#14031).
 
+    o	detach() when applied to an object other than a package
+	returns the environment that has been detached.
+
 
 DEPRECATED & DEFUNCT
 
