Backport r50363 (partial install options) from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50529 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,12 @@ NEW FEATURES
 
     o	The PCRE library has been updated to version 8.00.
 
+    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
+	--no-help, --no-demo, --no-exec, and --no-inst to suppress
+	installation of the specified part of the package.  These are
+	intended for special purposes (e.g. building a database
+	of help pages without fully installing all packages).
+
 
 INSTALLATION
 
