change defalt for 'force'
git-svn-id: https://svn.r-project.org/R/trunk@50535 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -92,9 +92,8 @@ NEW FEATURES
     o	The use of .required by require/detach has been replaced by
 	.Depends which is set from the 'Depends' field of a package
 	(even in packages with name spaces).  By default detach()
-	prevents such dependencies from being detached in interactive
-	use, and warns otherwise.  [The default is intended to be
-	changed before release.]
+	prevents such dependencies from being detached: this can be
+	overridden by the argument 'force'.
 
     o	bquote() has been extended to work on function definitions
 	(wish of PR#14031).
