change behaviour of non-interactive readline()
git-svn-id: https://svn.r-project.org/R/trunk@50536 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -101,6 +101,9 @@ NEW FEATURES
     o	detach() when applied to an object other than a package
 	returns the environment that has been detached.
 
+    o	readline() in non-interactive use returns "" and does not
+	attempt to read from the 'terminal'.
+
 
 DEPRECATED & DEFUNCT
 
