port r500537 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50538 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,9 @@ INSTALLATION
 	circumstances where it did not previously (where libtiff
 	needed to be linked explicitly against -ljpeg).
 
+    o	Making the refman.pdf works around a problem with the indexing
+	with hyperref 6.79f.
+
 
 DEPRECATED & DEFUNCT
 
