--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-﻿
+
 	**************************************************
 	*						 *
 	*	       2.11 SERIES NEWS			 *
@@ -103,6 +103,8 @@ NEW FEATURES
 
     o	readline() in non-interactive use returns "" and does not
 	attempt to read from the 'terminal'.
+
+    o	New function file_ext() in package 'tools'.	
 
 
 DEPRECATED & DEFUNCT
