--- a/NEWS
+++ b/NEWS
@@ -77,9 +77,10 @@ NEW FEATURES
 	output type and to check for consistency in the function
 	values.
 
-    o	The main HTML help page now links to this NEWS file.
-	(Suggested by Henrik Bengtsson.)  Package index files link
-	to a list of demos when using dynamic help.
+    o	The main HTML help page now links to a reformatted copy of
+	this NEWS file. (Suggested by Henrik Bengtsson.)  Package
+	index files link to the package DESCRIPTION and NEWS files and
+	a list of demos when using dynamic help.
 
     o	The [ method for class "AsIs" allows the next method to change
 	the underlying class.  (Wish of Jens Oehlschlägel.)
