ported r50547 [besselJ, besselY] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50550 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -139,6 +139,9 @@ BUG FIXES
 	incomplete, which this could crash R if a DLL that registered
 	.External routines had earlier been unloaded.
 
+    o	bessel[JY](x, nu) with nu a negative integer (a singular case)
+	is now correct, analogously to besselI(), see PR#13556, below.
+
 
 
 		CHANGES IN R VERSION 2.10.0
