ported r50552 [pchisq(*, ncp > 80) from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50553 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -142,6 +142,8 @@ BUG FIXES
     o	bessel[JY](x, nu) with nu a negative integer (a singular case)
 	is now correct, analogously to besselI(), see PR#13556, below.
 
+    o	pchisq(x, df, ncp=L) no longer can return values slightly larger
+	than 1, and for now gives an accuracy warning for L > 80.
 
 
 		CHANGES IN R VERSION 2.10.0
