port 50557 [pnchisq warning] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50558 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -143,7 +143,7 @@ BUG FIXES
 	is now correct, analogously to besselI(), see PR#13556, below.
 
     o	pchisq(x, df, ncp=L) no longer can return values slightly larger
-	than 1, and for now gives an accuracy warning for L > 80.
+	than one for large L.
 
 
 		CHANGES IN R VERSION 2.10.0
