add xtfrm method for difftime
git-svn-id: https://svn.r-project.org/R/trunk@50578 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -107,6 +107,8 @@ NEW FEATURES
 
     o	New function file_ext() in package 'tools'.
 
+    o	Added "difftime" method for xtfrm().
+
 
 DEPRECATED & DEFUNCT
 
