make xtfrm() primitive so S4 methods are dispatched
git-svn-id: https://svn.r-project.org/R/trunk@50584 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -107,7 +107,10 @@ NEW FEATURES
 
     o	New function file_ext() in package 'tools'.
 
-    o	Added "difftime" method for xtfrm().
+    o	xtfrm() is now primitive, as this allows S4 methods to be set
+	on it without name space scoping issues.
+
+	Added "difftime" method for xtfrm().
 
 
 DEPRECATED & DEFUNCT
