repair mean.difftime
git-svn-id: https://svn.r-project.org/R/trunk@50586 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -297,6 +297,8 @@ BUG FIXES
     o	unsplit(drop = TRUE) applied to a data frame failed to pass
 	'drop' to the computation of row names.
 
+    o	The "difftime" method of mean() ignored its 'na.rm' argument.
+
 
 
 		CHANGES IN R VERSION 2.10.0
