port r50589 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50590 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -158,6 +158,9 @@ BUG FIXES
 
     o	The "difftime" method of mean() ignored its 'na.rm' argument.
 
+    o	tcltk::tk_select.list() is now more likely to remove the
+	widget immediately after selection is complete.
+
 
 
 		CHANGES IN R VERSION 2.10.0
