more tweaks to weighted.mean
git-svn-id: https://svn.r-project.org/R/trunk@50595 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -107,13 +107,17 @@ NEW FEATURES
 
     o	New function file_ext() in package 'tools'.
 
-    o	xtfrm() is now primitive, as this allows S4 methods to be set
-	on it without name space scoping issues.
+    o	xtfrm() is now primitive and internally generic, as this allows
+	S4 methods to be set on it without name space scoping issues.
 
 	Added "difftime" method for xtfrm().
 
     o	is.numeric(x) is now false for a "difftime" object
 	(multiplication and division make no sense for such objects).
+
+    o	The default method of weighted.mean(x, w) coerces 'w' to be
+	numeric (aka double); previously only integer weights were
+	coerced.
 
 
 DEPRECATED & DEFUNCT
