more tweaks to weighted.mean
git-svn-id: https://svn.r-project.org/R/trunk@50596 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -117,7 +117,10 @@ NEW FEATURES
 
     o	The default method of weighted.mean(x, w) coerces 'w' to be
 	numeric (aka double); previously only integer weights were
-	coerced.
+	coerced.  Zero weights are handled specially so an infinite
+	value with zero weight does not force an NaN value.
+
+	There is now a "difftime" method.
 
 
 DEPRECATED & DEFUNCT
