special-case some operator dispatch involving "difftime"
git-svn-id: https://svn.r-project.org/R/trunk@50602 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -151,6 +151,10 @@ BUG FIXES
     o	Using with(), eval() etc with a list with some unnamed
 	elements now works. (PR#14035)
 
+    o	Adding/subtracting a "difftime" object to/from a "POSIXt" or
+	"Date" object works again (it was broken by the addition of
+	Ops.difftime).
+
 
 
 
