more tweaks to quantile
git-svn-id: https://svn.r-project.org/R/trunk@50604 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -129,7 +129,8 @@ NEW FEATURES
 	report, and otherwise generates an email to the package
 	maintainer.  (Suggested by Barry Rowlingson.)
 
-    o	quantile() now has a method for the date-time class "POSIXt".
+    o	quantile() now has a method for the date-time class "POSIXt",
+ 	and types 1 and 3 work for Dates and ordered factors.
 
 
 DEPRECATED & DEFUNCT
