--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -3471,7 +3471,7 @@ R.  There can be more than one @code{\keyword} entry if the @R{} object
 being documented falls into more than one category, or none.
 
 The special keyword @samp{internal} marks a page of internal objects
-that are not part of the packages' API.  If the help page for object
+that are not part of the package's API.  If the help page for object
 @code{foo} has keyword @samp{internal}, then @code{help(foo)} gives this
 help page, but @code{foo} is excluded from several object indices,
 including the alphabetical list of objects in the @HTML{} help system.
@@ -3969,7 +3969,7 @@ for the dots in function argument lists @samp{@dots{}}, and
 @code{\ldots}
 @findex \ldots
 for ellipsis dots in ordinary text.@footnote{There is only a fine
-distinction between @code{\dots} and @code{\dots}.  It is technically
+distinction between @code{\dots} and @code{\ldots}.  It is technically
 incorrect to use @code{\ldots} in code blocks and @code{tools::checkRd}
 will warn about this---on the other hand the current converters treat
 them the same way in code blocks, and elsewhere apart from the small
