Changes to fix efficiency in dispatch, potential recursive loops, and incorrect signatures, all for S4 methods for primitive functions.
1.  A bug in get_primitive_methods prevented all quick dispatch of primitives from
working. Fixing this exposed a problem in quickDispatch in methods
that prevented matching methods with traiiling "missing" in the
signature.

2.  A mechanism was added to temporarily turn off all dispatch of methods for
primitives.  The code for findInheritedMethods activates the
mechanism.  At the moment, this is just for efficiency, but in
principle it could be needed to avoid recursive calls to
findInheritedMethods.

3. The signatures for "$" and "$<-" were modified to remove "name",
since the grammar prevents general objects for this argument.

Some additional changes were tested but not installed to allow a
general signature in methods for "[", "[[" and their replacement
versions. Problems found with the Matrix package for this change.  See
the commented calls to DiispatchAnyOrEval in src/main.



git-svn-id: https://svn.r-project.org/R/trunk@50609 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -158,6 +158,18 @@ BUG FIXES
 	"Date" object works again (it was broken by the addition of
 	Ops.difftime).
 
+    o	The "quick" dispatch of S4 methods for primitive functions was
+        not happening, forcing a search each time. (Dispatch for true
+        functions was not affected.)
+
+    o	Trying to dispatch methods for primitives during the search
+        for inherited methods slows that search down and potentially
+        could cause an infinite recursion.  An internal switch was
+        added to turn off all such methods from findInheritedMethods.
+
+    o	The R grammar prevents using the argument "name" in signatures
+        of methods for "$" and "$<-".  The generic functions have been
+        changed to reflect this.
 
 
 
