port r50602 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50610 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -161,6 +161,10 @@ BUG FIXES
     o	tcltk::tk_select.list() is now more likely to remove the
 	widget immediately after selection is complete.
 
+    o	Adding/subtracting a "difftime" object to/from a "POSIXt" or
+	"Date" object works again (it was broken by the addition of
+	Ops.difftime).
+
 
 
 		CHANGES IN R VERSION 2.10.0
