use CONSOLE_BUFFER_SIZE consistently, document limits
git-svn-id: https://svn.r-project.org/R/trunk@50623 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -189,6 +189,10 @@ NEW FEATURES
 	intended for special purposes (e.g. building a database
 	of help pages without fully installing all packages).
 
+    o	The documented line-length limit of 4095 bytes when reading
+	from the console now also applies also to parse(file="")
+	(which previously had a limit of around 1024 bytes).
+
 
 INSTALLATION
 
