add option for BioC mirror
git-svn-id: https://svn.r-project.org/R/trunk@50626 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -193,6 +193,11 @@ NEW FEATURES
 	from the console now also applies also to parse(file="")
 	(which previously had a limit of around 1024 bytes).
 
+    o	A Bioconductor mirror can be set for use by setRepositories()
+	via the option "BioC_mirror", e.g. the European mirror can be
+	selected by
+	options(BioC_mirror="http://bioconductor.statistik.tu-dortmund.de")
+
 
 INSTALLATION
 
