port r50641 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50642 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,10 @@ NEW FEATURES
 	selected by
 	options(BioC_mirror="http://bioconductor.statistik.tu-dortmund.de")
 
+    o	Double-clicking in a tk_select.list() list box now selects the
+	item and closes the list box (as happens on the Windows
+	select.list() widget).
+
 
 INSTALLATION
 
