fix no-alias conversion
git-svn-id: https://svn.r-project.org/R/trunk@50643 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -373,6 +373,8 @@ BUG FIXES
 	"Date" object works again (it was broken by the addition of
 	Ops.difftime).
 
+    o	Conversion to latex of an Rd file with no aliases failed.
+
 
 
 		CHANGES IN R VERSION 2.10.0
